vix/tests/checker-corpus/reject/duplicate-type-param.vix
struct Pair<A, A> {
    first: A,
}

fn main() -> Int {
    1
}
